comp_pro/atcoder/tdpc/tdpcd/first/error.txt
submit1.cpp:15:17: error: array bound is not an integer constant before ‘]’ token
   15 | double dp[Nmax+1][X2max+1][X3max+1][X5max+1];
      |                 ^
submit1.cpp:15:26: error: array bound is not an integer constant before ‘]’ token
   15 | double dp[Nmax+1][X2max+1][X3max+1][X5max+1];
      |                          ^
submit1.cpp:15:35: error: array bound is not an integer constant before ‘]’ token
   15 | double dp[Nmax+1][X2max+1][X3max+1][X5max+1];
      |                                   ^
submit1.cpp:15:44: error: array bound is not an integer constant before ‘]’ token
   15 | double dp[Nmax+1][X2max+1][X3max+1][X5max+1];
      |                                            ^
submit1.cpp: In function ‘void initial()’:
submit1.cpp:26:21: error: ‘dp’ was not declared in this scope
   26 |                     dp[ii][j][k][m]=0.0;
      |                     ^~
submit1.cpp:31:5: error: ‘dp’ was not declared in this scope
   31 |     dp[0][0][0][0]=1.0000;
      |     ^~
